--- a/client/pom.xml
+++ b/client/pom.xml
@@ -40,6 +40,14 @@
                         <phase>generate-sources</phase>
                     </execution>
                     <execution>
+                        <id>journeymap-tools</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>journeymap</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
                         <id>towns-and-towers</id>
                         <phase>generate-sources</phase>
                     </execution>
