--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.github.rremer</groupId>
         <artifactId>minecraft-modpack-rosecake</artifactId>
-        <version>1.20.4-1-SNAPSHOT</version>
+        <version>1.20.4-2-SNAPSHOT</version>
     </parent>
 
     <groupId>com.github.rremer</groupId>
     <artifactId>minecraft-modpack-rosecake-client</artifactId>
-    <version>1.20.4-1-SNAPSHOT</version>
+    <version>1.20.4-2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Minecraft Modpack Rosecake Client</name>
@@ -37,6 +37,14 @@
                 <executions>
                     <execution>
                         <id>fabric-api</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>goblin-traders</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
+                        <id>framework</id>
                         <phase>generate-sources</phase>
                     </execution>
                     <execution>
