--- a/client/pom.xml
+++ b/client/pom.xml
@@ -44,6 +44,10 @@
                         <phase>generate-sources</phase>
                     </execution>
                     <execution>
+                        <id>chimes</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
                         <id>framework</id>
                         <phase>generate-sources</phase>
                     </execution>
