--- a/server/pom.xml
+++ b/server/pom.xml
@@ -76,6 +76,10 @@
                         <phase>generate-sources</phase>
                     </execution>
                     <execution>
+                        <id>chimes</id>
+                        <phase>generate-sources</phase>
+                    </execution>
+                    <execution>
                         <id>framework</id>
                         <phase>generate-sources</phase>
                     </execution>
